--- a/Today'sMood/Xib/focus.xib
+++ b/Today'sMood/Xib/focus.xib
@@ -14,16 +14,16 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sJP-8T-gPa">
-                    <rect key="frame" x="0.0" y="144.5" width="359" height="12.5"/>
-                    <color key="backgroundColor" red="0.72358000280000001" green="0.79265141490000002" blue="0.96865040059999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    <rect key="frame" x="54" y="147.5" width="251" height="9.5"/>
+                    <color key="backgroundColor" red="0.83181596489999998" green="0.7096493116" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="bAx-Tc-zT1"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="sJP-8T-gPa" firstAttribute="leading" secondItem="bAx-Tc-zT1" secondAttribute="leading" id="FIa-dG-NJ5"/>
-                <constraint firstItem="bAx-Tc-zT1" firstAttribute="trailing" secondItem="sJP-8T-gPa" secondAttribute="trailing" id="Ixc-PR-fOy"/>
-                <constraint firstItem="sJP-8T-gPa" firstAttribute="height" secondItem="dQu-z9-9Ub" secondAttribute="height" multiplier="0.08" id="baQ-PM-W7k"/>
+                <constraint firstItem="sJP-8T-gPa" firstAttribute="centerX" secondItem="dQu-z9-9Ub" secondAttribute="centerX" id="7M1-nI-DD8"/>
+                <constraint firstItem="sJP-8T-gPa" firstAttribute="width" secondItem="dQu-z9-9Ub" secondAttribute="width" multiplier="0.7" id="Xje-zg-1mz"/>
+                <constraint firstItem="sJP-8T-gPa" firstAttribute="height" secondItem="dQu-z9-9Ub" secondAttribute="height" multiplier="0.06" id="baQ-PM-W7k"/>
                 <constraint firstAttribute="bottom" secondItem="sJP-8T-gPa" secondAttribute="bottom" id="h2S-Rd-CXD"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
